# done

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  eas.json  package-lock.json  package.json
apps/api/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
apps/api/app/: __init__.py  access.py  config.py  database.py  main.py  schemas.py  workflow.py
apps/api/app/application/: __init__.py  catalog_service.py  mission_service.py  portfolio_planning_service.py  user_service.py
apps/api/app/application/ports/: __init__.py  ai.py  mission.py  (+2 more)
apps/api/app/domain/: __init__.py  common.py
apps/api/app/infrastructure/: __init__.py
apps/api/app/presentation/: __init__.py  catalog_router.py  user_router.py
apps/api/data/: child_birthday_catalog.json  child_birthday_catalog_research.tsv
apps/api/scripts/: generate_birthday_catalog.py
apps/api/sql/: mock_catalog.sql
apps/api/tests/: conftest.py  test_access_api.py  test_agent_actions.py  test_ai_adapters.py  test_api.py  test_catalog_api.py  test_execution_preferences.py  test_mission_operations.py  test_mission_service.py  test_mock_catalog_sql.py  test_portfolio_planning.py  test_real_runtime_contract.py  test_realtime.py  test_runtime_api.py  test_users.py
apps/api/tests/unit/: test_access.py  test_catalog.py  test_domain.py  test_funding.py  test_intake.py  test_portfolio_needs.py  test_spoken_approval.py
apps/stt/: Dockerfile  README.md  pyproject.toml
apps/stt/stt_service/: __init__.py  audio.py  config.py  engine.py  main.py
apps/stt/tests/: test_engine.py
(+124 files in other folders)
